# Cellular-Automata-Ecosystem

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Readme.md  config.json
include/: BoardOperations.hpp  Common.hpp  ConfigManager.hpp  DrawStrategy.hpp  Entity.hpp  Enviroment.hpp  Factory.hpp  Game.hpp  GameState.hpp  Grid.hpp  Matrix.hpp  Plant.hpp  Position.hpp  Tile.hpp  Utils.hpp  matrix.hpp  tile.hpp
src/: BoardOperations.cpp  ConfigManager.cpp  DrawStrategy.cpp  Entity.cpp  Enviroment.cpp  Game.cpp  Grid.cpp  Plant.cpp  Shape.hpp  Tile.cpp  Tile.hpp  Utils.cpp  main.cpp  mainMatrixTest.cpp  mainTile.cpp
